kubernetes/service-mesh/production/peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: app-namespace-strict
  namespace: year4-project
spec:
  mtls:
    mode: STRICT
